написана логика настроек пользователя (#19)
* написана логика настроек пользователя

* linting

* linting

* linting

* linting

* Обновлена документация, добавлены примеры запросов

* фиксы директории и мелкие правки

* тесты в табличном стиле

---------
